kubernetes/templates/clusterip.yaml
# Define a Kubernetes Service resource for my-internal-service.
# This Service exposes a set of pods (app: my-app) internally within the cluster.

apiVersion: v1
kind: Service
metadata:
  name: my-internal-service  # Specify the name of the Service
spec:
  selector:
    app: my-app  # Select pods with label app=my-app to expose through this Service
  type: ClusterIP  # Expose the Service internally within the cluster
  ports:
    - name: http  # Name of the port
      port: 80  # Port exposed on the Service
      targetPort: 80  # Port on the pods to forward traffic to
      protocol: TCP  # Protocol used for the port (TCP in this case)
