kubernetes/templates/loadbalancer.yaml
# Define a Kubernetes Service resource for example-service.
# This Service exposes a set of pods (app: example) externally using a cloud provider's load balancer.

apiVersion: v1
kind: Service
metadata:
  name: example-service  # Specify the name of the Service
spec:
  selector:
    app: example  # Select pods with label app=example to expose through this Service
  ports:
    - port: 8765  # Port exposed on the Service
      targetPort: 9376  # Port on the pods to forward traffic to
  type: LoadBalancer  # Expose the Service externally using a cloud provider's load balancer
