kubernetes/templates/nodeport.yaml
# Define a Kubernetes Service resource for my-nodeport-service.
# This Service exposes a set of pods (app: my-app) on a specific port across all nodes.

apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service  # Specify the name of the Service
spec:
  selector:
    app: my-app  # Select pods with label app=my-app to expose through this Service
  type: NodePort  # Expose the Service on a specific port on all nodes
  ports:
    - name: http  # Name of the port
      port: 80  # Port exposed on the Service
      targetPort: 80  # Port on the pods to forward traffic to
      nodePort: 30036  # Port on the nodes to expose the Service (must be in the range 30000-32767)
      protocol: TCP  # Protocol used for the port (TCP in this case)
